Honor removed resources and classes in dev/test modes
Also make removed classes a first class citizen instead of a ugly hack.